# go2_ros2_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_core/lib/go2_core/: go2_base  video_stream_node.py
install/go2_core/share/go2_core/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_core/share/go2_core/cmake/: go2_coreConfig.cmake
install/go2_core/share/go2_core/config/: default.rviz.bak
install/go2_h264_repub/lib/go2_h264_repub/: go2_h264_repub
install/go2_h264_repub/share/go2_h264_repub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_h264_repub/share/go2_h264_repub/cmake/: go2_h264_repubConfig.cmake
install/go2_navigation/lib/go2_navigation/: auto_global_localizer.py
install/go2_navigation/share/ament_index/resource_index/package_run_dependencies/: go2_navigation
install/go2_navigation/share/go2_navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_navigation/share/go2_navigation/cmake/: go2_navigationConfig.cmake
install/go2_navigation/share/go2_navigation/config/: nav2_params.yaml  nav2_params.yaml.bak.20260710_190854
install/go2_navigation/share/go2_navigation/launch/: go2_nav2.launch.py
install/go2_perception/lib/go2_perception/: cloud_accumulation  pointcloud_to_laserscan_node
install/go2_perception/share/ament_index/resource_index/package_run_dependencies/: go2_perception
install/go2_perception/share/ament_index/resource_index/rclcpp_components/: go2_perception
install/go2_perception/share/go2_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_perception/share/go2_perception/cmake/: go2_perceptionConfig.cmake
install/go2_perception/share/go2_perception/launch/: go2_pointcloud_process.launch.py  go2_pointcloud_process.launch.py.bak.20260710_193313
install/go2_slam/share/go2_slam/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_slam/share/go2_slam/cmake/: go2_slamConfig.cmake
install/go2_slam/share/go2_slam/config/: mapper_params_online_async.yaml
install/go2_slam/share/go2_slam/launch/: go2_slamtoolbox.launch.py
install/go2_sport_api/lib/go2_sport_api/: vel_ctrl
install/go2_sport_api/share/go2_sport_api/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_sport_api/share/go2_sport_api/cmake/: export_go2_sport_apiExport-noconfig.cmake  export_go2_sport_apiExport.cmake
install/unitree_api/share/ament_index/resource_index/parent_prefix_path/: unitree_api
install/unitree_api/share/unitree_api/: package.sh
install/unitree_go/share/unitree_go/: local_setup.sh  package.sh
log/: latest_build
src/go2_ros2_toolbox/: LICENSE  README.md  README_usage_zh.md  README_zh.md
src/go2_ros2_toolbox/.github/ISSUE_TEMPLATE/: issue_template.md
src/go2_ros2_toolbox/go2_core/: CMakeLists.txt  package.xml
src/go2_ros2_toolbox/go2_core/config/: default.rviz
src/go2_ros2_toolbox/go2_core/launch/: go2_base.launch.py  go2_startup.launch.py
src/go2_ros2_toolbox/go2_core/src/: go2_base.cpp
src/go2_ros2_toolbox/go2_navigation/: CMakeLists.txt  package.xml
src/go2_ros2_toolbox/go2_navigation/config/: nav2_params.yaml.bak.20260710_190824
src/go2_ros2_toolbox/go2_navigation/go2_navigation/: go2_dashboard.py  publish_initial_pose.py  save_map_and_pose.py
src/go2_ros2_toolbox/go2_navigation/launch/: go2_localization_nav.launch.py
src/go2_ros2_toolbox/go2_perception/: CMakeLists.txt  package.xml
src/go2_ros2_toolbox/go2_perception/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
src/go2_ros2_toolbox/go2_perception/src/: cloud_accumulation.cpp  pointcloud_to_laserscan_node.cpp
src/go2_ros2_toolbox/go2_slam/: CMakeLists.txt
src/go2_ros2_toolbox/scripts/: go2_slam_record_session.sh  go2_start_saved_map_nav.sh
